--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,7 +8,7 @@ body {
   /* color: #cccccc; */
   /* background-color: #003153; */
   background-color: transparent;
-  background-image: linear-gradient(315deg, #f8f9d2 0%, #e8dbfc 74%);
+  background-image: linear-gradient(315deg, #c1dfd2 0%, #e8dbfc 74%);
 }
 
 p,
@@ -903,9 +903,26 @@ textarea.form-control {
 .navbar-default .navbar-nav > li.dropdown:hover > a,
 .navbar-default .navbar-nav > li.dropdown:hover > a:hover,
 .navbar-default .navbar-nav > li.dropdown:hover > a:focus {
-  /* background-color: rgb(231, 231, 231); */
-  /* color: rgb(85, 85, 85); */
+  background-color: #73c2fb;
+  color: rgb(85, 85, 85);
 }
 li.dropdown:hover > .dropdown-menu {
-  /* display: block; */
+  display: block;
+}
+.navbar-nav > li > .dropdown-menu {
+  background-color: transparent;
+  color: #73c2fb;
+}
+@media (max-width: 991px) {
+  .search {
+    padding: 0 0 0 !important;
+    background-color: #333333;
+    font-size: 0px;
+    border: none;
+    margin: 0;
+  }
+}
+.fs20 {
+  font-size: 20px;
+  color: #b0e0e6;
 }
